[package]
name = "troll-invasion"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
argparse = "*"
log = "*"
env_logger = "*"
lazy_static = "*"
conrod = "0.56.0"
rusttype = "0.2.0"
codevisual = { git = "https://kuviman@bitbucket.org/kuviman/codevisual.git" }
ugli = { git = "https://kuviman@bitbucket.org/kuviman/codevisual.git" }
ws = "*"