[package]
name = "troll-invasion"
version = "0.1.0"
authors = ["kuviman <kuviman@gmail.com>"]

[dependencies]
argparse = "*"
log = "*"
env_logger = "*"
lazy_static = "*"
codevisual = { git = "https://github.com/kuviman/codevisual.git" }
ugli = { git = "https://github.com/kuviman/codevisual.git" }
ws = "*"
